[package]
name = "ptr_info_lib"
version = "0.2.1"
edition = "2021"
description = "A Rust library for retrieving information about pointer memory regions in Linux"
license = "MIT OR Apache-2.0"
repository = "https://github.com/pascal71/ptr_info_lib"
keywords = ["pointer", "memory", "debugging"]
categories = ["development-tools::debugging", "programming-languages::rust"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
